--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: discord-config
 data:
-  myvalue: "Hello World"
+  app: "955836104559460362"
