Add needs for terraform-helm-release github action job

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -47,6 +47,7 @@ jobs:
       env:
         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
   terraform-helm-release:
+    needs: terraform-gke-cluster
     name: "Terraform Helm Release"
     runs-on: ubuntu-latest
     steps:
