Add commit ish head to fetch tag

--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -42,6 +42,7 @@ jobs:
       uses: jimschubert/query-tag-action@v1
       with:
         include: 'v*'
+        commit-ish: 'HEAD'
 
     - name: Test
       run: echo $RELEASE_VERSION
