--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
     - 'v*.*.*'
+  pull_request:
+    types: [opened, reopened]
 
 jobs:
   docker:
@@ -30,6 +32,7 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v2
+        if: github.event_name != "pull_request"
         with:
           context: .
           push: true
