--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,6 +7,9 @@ on:
   pull_request:
     types: [opened, reopened]
 
+env:
+  RELEASE_VERSION: "temp"
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -16,6 +19,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set Tag
+        if: ${{ github.event_name != 'pull_request' }}
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - name: Set up QEMU
@@ -32,8 +36,7 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v2
-        if: github.event_name != "pull_request"
         with:
           context: .
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/codeexecute:${{ env.RELEASE_VERSION }}
