--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v2
-        if: github.event_name != "pull_request"
+        if: ${{ github.event_name != "pull_request" }}
         with:
           context: .
           push: true
