Add synchronize on pr type workflow trigger

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -5,7 +5,7 @@ on:
     tags:
     - 'v*.*.*'
   pull_request:
-    types: [opened, reopened]
+    types: [opened, reopened, synchronize]
 
 env:
   RELEASE_VERSION: "temp"
