Add gha pr event trigger for gke cluster and helm release

--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -8,6 +8,8 @@ on:
     workflows: ["Docker"]
     types:
       - completed
+  pull_request:
+    types: [opened, reopened, synchronize]
 
 jobs:
   check_changes:
