--- a/.github/workflows/gke-cluster.yaml
+++ b/.github/workflows/gke-cluster.yaml
@@ -4,14 +4,14 @@ on:
   push:
     branches:
     - 'main'
+  pull_request:
+    types: [opened, reopened, synchronize]
 
 jobs:
   check_changes:
     name: Check files
     outputs:
-      docker_changes: ${{ steps.changes_docker.outputs.src }}
       gke_cluster_changes: ${{ steps.changes_terraform_gke_cluster.outputs.src }}
-      helm_release_changes: ${{ steps.changes_terraform_helm_release.outputs.src }}
     runs-on: ubuntu-latest
     steps:
       # Checkout the repository to the GitHub Actions runner
