--- a/.github/workflows/gke-cluster.yaml
+++ b/.github/workflows/gke-cluster.yaml
@@ -60,7 +60,7 @@ jobs:
 
     # On push to main, build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' && github.event_name != 'pull_request' }}
       run: terraform apply -auto-approve
       working-directory: ./terraform/gke-cluster
       env:
